Bugfix/no ref/header dark mode (#96)
* feat: 2 minutes Subscribe

* feat: header dark

* feat: pagination dark

* feat: rights dark

* feat: contacts dark

* feat: sign up dark

* feat: sign up dark upd

* feat: Login dark

* feat: forgot pass dark

* feat: dashboard dark

* feat: dark done

--- a/src/css/utils/_changeTheme.scss
+++ b/src/css/utils/_changeTheme.scss
@@ -1,8 +1,7 @@
 body.dark_theme {
     background-color: $dark_black;
 
-    .header {
-        background-color: $dark_hover_and_bg_transperency;
-    }
+    
+
     
 }
