--- a/src/modules/shared/components/Auth/Register/Register.module.scss
+++ b/src/modules/shared/components/Auth/Register/Register.module.scss
@@ -108,3 +108,74 @@
     }
   }
 }
+
+.dark_theme {
+  .auth-card {
+    background-color: $dark_hover_and_bg_transperency;
+    border: 1px solid $original_hover_and_bg_transperency;
+
+    h2 {
+      color: $original_hover_and_bg_transperency;
+    }
+  }
+
+  .form-group {
+    color: $original_icons;
+
+    label {
+      color: $original_secondary;
+    }
+
+    input {
+      border: toRem(1) solid $original_primary;
+      background-color: $original_icons;
+      color: $original_primary;
+
+      &::placeholder {
+        color: $original_primary;
+      }
+
+      &:focus {
+        border-color: $original_secondary;
+      }
+    }
+  }
+
+  .auth-btn {
+    background-color: $original_primary;
+    color: $original_white;
+    transition: all $transitionDuration ease;
+
+    @media (hover: hover) and (pointer: fine) {
+      &:hover {
+        border: 1px solid $original_hover_and_bg_transperency;
+      }
+    }
+  }
+
+  .auth-link {
+    color: $original_primary;
+    text-decoration: none;
+
+    @media (hover: hover) and (pointer: fine) {
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+
+  .form-footer {
+    color: $original_secondary;
+
+    a {
+      color: $original_hover_and_bg_transperency;
+      text-decoration: none;
+
+      @media (hover: hover) and (pointer: fine) {
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
